Fixed spacing issues when in Mobile S viewport in chrome developer tools.

--- a/src/Profile.css
+++ b/src/Profile.css
@@ -72,6 +72,8 @@ button:hover {
   button {
     display: inline-block;
     padding-bottom: 10px;
+    padding-left: 11px;
+    padding-right: 7px;
   }
 
   .top {
@@ -86,5 +88,23 @@ button:hover {
     font-size: 25px;
     bottom: -30px;
     padding-bottom: 0;
+  }
+
+  .time {
+    font-size: 150%;
+  }
+
+  .previous-time {
+    margin: 0;
+
+    float: none;
+    position: unset;
+  }
+
+  .card-body p {
+    display: block;
+    text-align: center;
+    margin: 0;
+    padding-top: 6px;
   }
 }
